[metadata]
name = latexexpr
version = 0.4
author = Jakub Kaderka, Jan Stransky
author_email = jakub.kaderka@gmail.com
description = Module for easy LaTeX typesetting of algebraic expressions in symbolic form with automatic substitution and result computation.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/kajusK/latexexpr
project_urls =
    Documentation = https://kajusk.github.io/latexexpr/
    Bug Tracker = https://github.com/kajusK/latexexpr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
